--- a/app/views/public/css/profileStyle.css
+++ b/app/views/public/css/profileStyle.css
@@ -9,15 +9,17 @@ body, html {
     background: rgb(49, 47, 47);
 }
 .headerPage {
+    position: fixed;
     background: rgb(58, 57, 57);
     display: flex;
     justify-content: space-between;
-    padding: .5rem 2rem 0 2rem;
+    padding: 0 2rem 0 2rem;
     align-items: center;
 }
 .logoContainer {
     display: flex;
     gap: .5rem;
+    padding-top: .5rem;
 }
 .logoContainer > h1 {
     color: #fefefe;
@@ -33,6 +35,7 @@ body, html {
     padding: .3rem;
     background: rgb(40, 38, 38);
     padding: 0 2rem 0 2rem;
+    height: 100%;
 }
 .username {
     color: #fefefe;
@@ -101,7 +104,6 @@ body, html {
     position: absolute;
     width: 90%;
     margin-left: 5%;
-    height: 80%;
     margin-top: 2.5%;
     border-radius: 12px;
     display: flex;
@@ -122,12 +124,10 @@ body, html {
 }
 
 .imgProfile {
-    width: 50%;
-    height: 50%;
+    width: 10%;
+    height: 10%;
     border-radius: 50%;
     background: rgb(46, 43, 43);
-    margin-left: 50%;
-    transform: translateX(-50%);
     margin-top: 5%;
     display: grid;
     place-content: center;
@@ -142,7 +142,9 @@ body, html {
     transform: scale(1.3);
     color: #fefefe;
 }
-
+.infoUser > ul {
+    background: red;
+}
 .infoUser {
     margin-top: 1.5rem;
 }
